fix alignment issue

--- a/src/views/home.css
+++ b/src/views/home.css
@@ -160,7 +160,7 @@ button.primary:hover span:after {
   flex-direction: column;
   justify-content: center;
   border-bottom-width: 1px;
-  height: 100vh;
+
 }
 
 .team-about {
@@ -427,7 +427,6 @@ button.primary:hover span:after {
   padding-top: 120px;
   border-color: #51515A;
   padding-bottom: 120px;
-  height: 150vh;
 }
 
 .home-container1 {
